[package]
name = "blockchain"
version = "0.1.0"
authors = ["Mario Idival <marioidival@gmail.com>"]

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust-crypto = "^0.2"
url = "1.6.0"
hyper = "0.10.0"

rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = { version = "0.3.3", features = ["json"] }
lazy_static = "0.2"
